Fixed misaligned back button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,8 +105,7 @@ main {
     padding:25px;
 }
 #backIcon {
-    position: fixed;
-    left: 28px;
+    right: 5px;
 }
 #backIcon:hover {
     cursor: pointer;
